--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^3.11.4",
+    "@mux/upchunk": "^3.5.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@mui/icons-material": "7.3.5",
